--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,13 @@ edition = "2018"
 
 [dependencies]
 dotenv = "0.15.0"
-diesel = { version = "1.4.5", features = ["postgres", "uuid"] }
 actix-web = "2.0.0"
 actix-rt = "1.1.1"
 actix-files = "0.2.2"
+bcrypt = "0.8.1"
+serde = "1.0.114"
+serde_derive = "1.0.114"
+publicsuffix = "1.5.4"
+actix-http = "1.0.1"
+uuid = { version = "0.8.1", features = ["serde"] }
+diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2"] }
