--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ publicsuffix = "1.5.4"
 actix-http = "1.0.1"
 uuid = { version = "0.8.1", features = ["serde"] }
 diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2"] }
+nix = "0.18.0"
+actix-service = "1.0.5"
