--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ uuid = { version = "0.8.1", features = ["serde"] }
 diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2"] }
 nix = "0.18.0"
 actix-service = "1.0.5"
+actix-session = "0.3.0"
