--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2"] }
 nix = "0.18.0"
 actix-service = "1.0.5"
 actix-session = "0.3.0"
+tokio = { version = "0.2.22", features=["fs"] } 
